Fixed QPS